scss/docs.scss
// Framework imports
@import "compass/css3";
@import "susy";

// Regular imports
@import "docs/vars";
@import "docs/mixins";
@import "docs/normalize";
@import "docs/pygments";

.cl-device-controls,
.cl-demo-list,
.cl-docs-content {
  display: none;
}

@media all and (min-width: $break-test-device + 1) {


  // Demo layout

  body {
    margin: 0;
    padding: 0;
    background: #FFF;
  }

  #demo-app .content-wrapper {
    @include clearfix;
    height: 100%;
    width: 100%; // Firefox fix
  }

  #layout-demo, html {
    height: 100%;
  }

  #demo-app {
    height: 100%;
    position: relative;
  }


  .cl-docs {

    & {
      font-family: Arial, sans-serif;
      font-size: 14px;
      color: #666;
      line-height: 1.5;
    }

    p, h4 {
      margin: 6px 0;
    }

    hr {
      border: none;
      border-bottom: 1px solid #CCC;
      margin: 18px 0;
    }

    h1, h2 {
      color: #000;
      line-height: 1.1;
    }

    h3 {
      color: #333;
      font-weight: 600;
      font-size: 18px;
      margin: 12px 0;
    }

    h4 {
      color: #000;
    }

    blockquote { 
      font-style: italic;
    }

    pre {
      padding: 10px;
      margin: 0 0 1px;
      font-size: 12px;
      @include border-radius(4px);
      background: #EDEFF1;
      line-height: 1.3;
      white-space: pre-wrap;       /* css-3 */
      white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
      white-space: -pre-wrap;      /* Opera 4-6 */
      white-space: -o-pre-wrap;    /* Opera 7 */
      word-wrap: break-word;       /* Internet Explorer 5.5+ */ 
      & + pre {
        border-bottom-radius: 4px;
      }
    }

    .help-text {
      color: $muted-text;
      font-size: 11px;
    }

  }

  // Device controls

  .cl-device-controls {
    display: block;

    font-family: Arial, sans-serif;
    font-size: 13px;
    color: #7F8487;

    @include pie-clearfix;
    width: 100%;
    line-height: 44px;
    height: 44px;

    border-bottom: 1px solid rgba(0,0,0,0.15);

    label {
      line-height: 44px;
      margin-right: 3px;
      &:after {
        content: ":";
      }
    }
    & > div {
      width: 25%;
      text-align: center;
      float: left;
    }
    select {
      margin-top: 12px;
    }
    input[type="range"] {
      position: relative;
      // Webkit
      top: 5px;
    }
  }

  @-moz-document url-prefix() { 
    .cl-device-controls input[type="range"] {
      // Firefox positioning switch
      top: 2px;
    }
  }

  // Content layout

  // Widths if there are no docs

  .cl-demo-list,
  .cl-device-frame,
  .cl-docs-content {
    display: block;
    height: 100%;
    float: left;
    @include box-sizing("border-box");
  }

  .cl-demo-list {
    width: 10%;
  }
  
  .cl-docs-content {
    display: none;
  }

  .cl-device-frame {
    width: 90%;
  }

  // Widths if docs are visible

  .docs-visible {
    .cl-docs-content {
      width: 30%;
      display: block;
    }
    .cl-device-frame {
      width: 60%;
    }
  }

  // Center the device within the frame

  .cl-device-frame {
    padding: 15px;
    /* Compass version */
    @include display-box;
    @include box-align(center);
    @include box-pack(center);
  }

  // Demo list (navigation)

  .cl-demo-list {
    font-size: 13px;
    font-family: Arial, sans-serif;
    overflow: hidden;
    background: #FFF;
    border-right: 1px solid rgba(0,0,0,0.15);
    height: 100%;
    line-height: 1.33;
    h4, a {
      display: block;
      border: none;
      padding: 4px;
    }
    h4 {
      margin: 12px 0 0 0;
    }
    a {
      @include default-links;
      @include no-underlines;
      &:hover {
        background: #EEE;
      }
    }
  }

  // Docs content

  .cl-docs-content {
    border-right: 1px solid rgba(0,0,0,0.15);
    overflow: scroll;
    .cl-docs {
      padding: 15px;
    }
    font-size: 13px;
    h3:first-child {
      margin-top: 0;
    }
  }

}

